--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,17 @@
   @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
 }
 
+.top-background {
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    360deg,
+    rgba(131, 58, 180, 0.5) 0%,
+    rgba(253, 29, 29, 0.5) 55%,
+    rgba(252, 176, 69, 0.5) 100%
+  );
+  height: 90vh;
+}
+
 /* Start purging... */
 @tailwind utilities;
 /* Stop purging. */
