--- a/styles/index.css
+++ b/styles/index.css
@@ -11,14 +11,19 @@
   @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
 }
 
+.dark-font {
+  color: #17252a;
+}
+
+.teal-btn {
+  background-color: #2b7a78;
+}
+
+.teal-btn:hover {
+  background-color: #3aafa9;
+}
+
 .top-background {
-  background: rgb(131, 58, 180);
-  background: linear-gradient(
-    360deg,
-    rgba(131, 58, 180, 0.5) 0%,
-    rgba(253, 29, 29, 0.5) 55%,
-    rgba(252, 176, 69, 0.5) 100%
-  );
   height: 90vh;
 }
 
